# free-agent

./: .env.example  Cargo.toml  README.md  README_en.md  README_vi.md
skills/: code-review.md  database-sql.md  docker-devops.md  general.md  git-workflow.md  gmail.md  project-management.md  research.md  security-awareness.md  telegram-ux.md
src/: config.rs  main.rs
src/agent/: loop_runner.rs  mod.rs  tool_registry.rs
src/db/: mod.rs
src/provider/: claude.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  pool.rs  types.rs
src/skills/: mod.rs
src/telegram/: formatter.rs  handler.rs  mod.rs
src/tools/: claude_code.rs  gmail.rs  mod.rs  planning.rs  sheets.rs  system.rs  web.rs
