[package]
name = "free-agent"
version = "0.1.0"
edition = "2024"
description = "Free AI Agent Telegram bot with round-robin LLM providers"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls"] }

# HTTP client (LLM API calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utils
futures = "0.3"

# UUID
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"

# URL encoding
urlencoding = "2"

# Base64 encoding (for image uploads)
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
